forth/test/fail/test_discard_param_read.af
\ Must fail to compile.
fun: test_discard_param_read_fail { _val -- out } _val end
